# Shifted

./: .gitignore  ARCHITECTURE.md  DEPLOY.md  README.md  make_erd.py  make_schema_pdf.py
backend/: .env.example  README.md  REFUND_DESIGN.md  pyproject.toml  requirements.txt
backend/app/: config.py  database.py  deps.py  email_templates.py  main.py  models.py  recurrence.py  schema_migrate.py  schemas.py  security.py  seed.py  seed_extra.py  utils.py
backend/app/routers/: admin.py  auth.py  bookings.py  documents.py  notifications.py  payment_methods.py  payments.py  places.py  ratings.py  reports.py  rides.py  support.py  vehicles.py  wallet.py  ws_chat.py
backend/app/services/: chat_hub.py  email.py  file_storage.py  notifications.py  org_scope.py  payment_gateway.py  refunds.py  sms.py
backend/tests/: conftest.py  test_payments_verify.py  test_recurring_series.py  test_sprint2_features.py
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: ActivationChecklist.tsx  AuthShell.tsx  Avatar.tsx  Button.tsx  Card.tsx  CommutePresets.tsx  EmptyState.tsx  Field.tsx  Layout.tsx  MapView.tsx  MobileBottomNav.tsx  Modal.tsx  NotificationBell.tsx  OfferGate.tsx  PageHeader.tsx  PlacesAutocomplete.tsx  PolicyNote.tsx  ProtectedRoute.tsx  RecurrencePicker.tsx  Sidebar.tsx  Skeleton.tsx  Splash.tsx  StatCard.tsx  StatusBadge.tsx  Table.tsx  Topbar.tsx  TripChat.tsx
frontend/src/context/: AuthContext.tsx  ToastContext.tsx
frontend/src/lib/: api.ts  format.ts  googleMaps.ts  (+7 more)
(+15 files in other folders)
